# graphml-project

./: .gitignore  README.md  download_PU1K.py  environment.yml  ideas.md  proposal.tex  pyproject.toml  references.bib  requirements.txt
configs/: config.yaml
configs/evaluation/: eval_config.yaml
normal_diffusion/: eval.py  playground.ipynb  train.py  trainer.py
normal_diffusion/data/: dataloader.py  get_pcpnet_dataset.py  patches.py  transforms.py
normal_diffusion/evaluation/: evaluation.py
normal_diffusion/models/: __init__.py  gnn_layers.py  models.py  utils.py
normal_diffusion/noise/: gaussian_noise.py  von_mises_fisher.py
normal_diffusion/training/: training.py
normal_diffusion/utils/: visualization.py
proposal/: proposal.tex  references.bib
report/: project_template.tex  references.bib
src/: trainer.py
src/data/: dataset.py  graph.py
src/models/: gcn.py
src/noise/: von_mises_fisher.py
src/normal_diffusion/data/: get_pcpnet_dataset.py
src/normal_diffusion/noise/: gaussian_noise.py  von_mises_fisher.py
src/normal_diffusion/utils/: visualization.py
