[project]
name = "normal_diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.10"
dependencies = [
    "torch~=2.4.1",
    "torch-geometric~=2.6.1",
    "open3d~=0.18.0",
    "scikit-learn~=1.5.2",
    "torch-scatter~=2.1.2",
    "torch-sparse~=0.6.18",
    "torch-cluster~=1.6.3",
    "diffusers>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "ruff",
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
